change email and contact

--- a/index.html
+++ b/index.html
@@ -665,8 +665,8 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">UMMI Sukabumi, Jawa Barat</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 8392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@soget.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 857 5965 8629</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">nuggetsayuranofficial@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
